--- a/src/house_demo/estate_crew.ipynb
+++ b/src/house_demo/estate_crew.ipynb
@@ -31,7 +31,9 @@
     "from crewai import Task, Crew, Process\n",
     "from estate_agents import RealEstateAgents \n",
     "from crewai.tasks.conditional_task import ConditionalTask\n",
-    "from crewai.tasks.task_output import TaskOutput"
+    "from crewai.tasks.task_output import TaskOutput\n",
+    "from tool import skip_execution\n",
+    "IS_SKIP=True"
    ]
   },
   {
@@ -182,6 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "@skip_execution(IS_SKIP)\n",
     "def test_crew():\n",
     "     # 用户查询示例\n",
     "    user_queries = [\n",
@@ -207,6 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "@skip_execution(IS_SKIP)\n",
     "def start_real_estate_chat():\n",
     "    print(\"欢迎来到房产智能咨询助手！请输入您的问题（输入 '退出' 结束对话）\")\n",
     "    user_query=None\n",
