--- a/src/house_demo/estate_crew.ipynb
+++ b/src/house_demo/estate_crew.ipynb
@@ -33,6 +33,7 @@
     "from crewai.tasks.conditional_task import ConditionalTask\n",
     "from crewai.tasks.task_output import TaskOutput\n",
     "from tool import skip_execution\n",
+    "from tools.tools_wrapper import get_yaml_config\n",
     "IS_SKIP=True"
    ]
   },
@@ -48,11 +49,13 @@
     "    def __init__(self, user_query):\n",
     "        self.user_query = user_query\n",
     "        self.output_path =\"./result.md\"\n",
+    "        self.task_configs=get_yaml_config(\"config/tasks.yaml\")\n",
+    "        self.history = []\n",
+    "\n",
     "        self.agents = self._initialize_agents()\n",
     "        self.intent_task =self._update_intent_task()\n",
     "        self.tasks = self._create_tasks()\n",
     "        self.crew = self._create_crew()\n",
-    "        self.history = []\n",
     "\n",
     "    def _initialize_agents(self):\n",
     "        \"\"\"初始化所有智能体\"\"\"\n",
@@ -210,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@skip_execution(IS_SKIP)\n",
+    "# @skip_execution(IS_SKIP)\n",
     "def start_real_estate_chat():\n",
     "    print(\"欢迎来到房产智能咨询助手！请输入您的问题（输入 '退出' 结束对话）\")\n",
     "    user_query=None\n",
@@ -228,14 +231,6 @@
     "\n",
     "start_real_estate_chat()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12a769df",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
