add test autogen

--- a/src/LLM_crewai.ipynb
+++ b/src/LLM_crewai.ipynb
@@ -55,18 +55,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "7fe561b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "load_dotenv()\n",
-    "BASE_URL= \"https://dashscope.aliyuncs.com/compatible-mode/v1\"\n",
-    "ONLINE_MODEL_NAME =\"qwen-plus\"\n",
-    "api_key = (\n",
-    "            os.getenv(\"QWEN_API_KEY\")\n",
-    "            or os.getenv(\"DASHSCOPE_API_KEY\")\n",
-    "        ) \n"
+    "BASE_URL= os.getenv(\"BASE_URL\")\n",
+    "ONLINE_MODEL_NAME = os.getenv(\"ONLINE_MODEL_NAME\")\n",
+    "api_key = ( os.getenv(\"QWEN_API_KEY\") or os.getenv(\"DASHSCOPE_API_KEY\" ) ) \n"
    ]
   },
   {
@@ -89,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "d567f8b4",
    "metadata": {},
    "outputs": [],
@@ -99,7 +96,7 @@
     "            base_url=BASE_URL,\n",
     "            api_key=api_key,\n",
     "            model=\"openai/\"+ONLINE_MODEL_NAME,  # 本次使用的模型\n",
-    "            # temperature=0.7,  # 发散的程度\n",
+    "            # temperature=0.7,  \n",
     "            # timeout=None,\n",
     "            # max_retries=2,\n",
     "        )\n",
@@ -234,13 +231,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "d3ce7df8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 定义任务\n",
     "datapath ='./results/datas.md' \n",
+    "output_path ='./results/new_post.md' \n",
+    "\n",
     "task1 = Task(\n",
     "    description=f\"收集并分析'{product_name}'的市场数据，包括竞争对手、用户评价和市场趋势\",\n",
     "    expected_output=\"一份详细的市场分析报告，包含关键洞察和机会点\",\n",
@@ -264,7 +263,7 @@
     "    expected_output=\"3条简洁有力、符合社交媒体风格的推广文案\",\n",
     "    agent=content_creator,\n",
     "    context=[task1,task2],  \n",
-    "    output_file= os.path.join(project_dir,'results/new_post.md' )\n",
+    "    output_file=output_path\n",
     ")\n",
     "\n"
    ]
