--- a/src/house_demo/estate_crew.ipynb
+++ b/src/house_demo/estate_crew.ipynb
@@ -32,8 +32,8 @@
     "from estate_agents import RealEstateAgents \n",
     "from crewai.tasks.conditional_task import ConditionalTask\n",
     "from crewai.tasks.task_output import TaskOutput\n",
-    "from tool import skip_execution\n",
-    "from tools.tools_wrapper import get_yaml_config\n",
+    "from tools.tool import skip_execution\n",
+    "from tools_wrapper import get_yaml_config\n",
     "IS_SKIP=True"
    ]
   },
