update test autogen

--- a/src/LLM_autogen.ipynb
+++ b/src/LLM_autogen.ipynb
@@ -71,6 +71,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ee4f01ec",
+   "metadata": {},
+   "source": [
+    "### Define model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7f6fb22e",
@@ -109,19 +117,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7446ea87",
+   "metadata": {},
+   "source": [
+    "### 测试模型接口"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f9ebb5b5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "异步函数 test_model_connected 已跳过执行\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@skip_execution(IS_SKIP)\n",
     "async def test_model_connected():\n",
@@ -138,26 +146,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0f5046ba",
+   "metadata": {},
+   "source": [
+    "### Single Agent"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2a3bb0ec",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------- TextMessage (user) ----------\n",
-      "What is the weather in New York?\n",
-      "---------- ToolCallRequestEvent (weather_agent) ----------\n",
-      "[FunctionCall(id='call_ec2ec20ae733442da12ee3', arguments='{\"city\": \"New York\"}', name='get_weather')]\n",
-      "---------- ToolCallExecutionEvent (weather_agent) ----------\n",
-      "[FunctionExecutionResult(content='The weather in New York is 73 degrees and Sunny.', name='get_weather', call_id='call_ec2ec20ae733442da12ee3', is_error=False)]\n",
-      "---------- ToolCallSummaryMessage (weather_agent) ----------\n",
-      "The weather in New York is 73 degrees and Sunny.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Define a simple function tool that the agent can use.\n",
@@ -180,6 +181,7 @@
     "\n",
     "\n",
     "# Run the agent and stream the messages to the console.\n",
+    "@skip_execution(IS_SKIP)\n",
     "async def main() -> None:\n",
     "    await Console(agent.run_stream(task=\"What is the weather in New York?\"))\n",
     "    # Close the connection to the model client.\n",
@@ -188,6 +190,141 @@
     "\n",
     "# NOTE: if running this inside a Python script you'll need to use asyncio.run(main()).\n",
     "await main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c7f7958",
+   "metadata": {},
+   "source": [
+    "### Struct Response\n",
+    "\n",
+    "bug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "590c4921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Literal\n",
+    "from pydantic import BaseModel\n",
+    "from autogen_agentchat.messages import StructuredMessage\n",
+    "\n",
+    "# The response format for the agent as a Pydantic base model.\n",
+    "class AgentResponse(BaseModel):\n",
+    "    thoughts: str\n",
+    "    response: Literal[\"happy\", \"sad\", \"neutral\"]\n",
+    "\n",
+    "agent = AssistantAgent(\n",
+    "    \"assistant\",\n",
+    "    model_client=model_client,\n",
+    "    system_message=\"Categorize the input as happy, sad, or neutral following the JSON format.\",\n",
+    "    # Define the output content type of the agent.\n",
+    "    output_content_type=AgentResponse,\n",
+    ")\n",
+    "\n",
+    "@skip_execution(IS_SKIP)\n",
+    "async def structMessage() -> None:\n",
+    "    result = await Console(agent.run_stream(task=\"I am happy.\"))\n",
+    "\n",
+    "    # Check the last message in the result, validate its type, and print the thoughts and response.\n",
+    "    assert isinstance(result.messages[-1], StructuredMessage)\n",
+    "    assert isinstance(result.messages[-1].content, AgentResponse)\n",
+    "    print(\"Thought: \", result.messages[-1].content.thoughts)\n",
+    "    print(\"Response: \", result.messages[-1].content.response)\n",
+    "    await model_client.close()\n",
+    "    \n",
+    "await structMessage()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "961a9c34",
+   "metadata": {},
+   "source": [
+    "### Multi Agents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d6df7f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import asyncio\n",
+    "\n",
+    "from autogen_agentchat.agents import AssistantAgent\n",
+    "from autogen_agentchat.base import TaskResult\n",
+    "from autogen_agentchat.conditions import ExternalTermination, TextMentionTermination\n",
+    "from autogen_agentchat.teams import RoundRobinGroupChat\n",
+    "from autogen_agentchat.ui import Console\n",
+    "from autogen_core import CancellationToken\n",
+    "from autogen_ext.models.openai import OpenAIChatCompletionClient\n",
+    "\n",
+    "VIEW_PROCESS =True\n",
+    "# Create the primary agent.\n",
+    "primary_agent = AssistantAgent(\n",
+    "    \"primary\",\n",
+    "    model_client=model_client,\n",
+    "    system_message=\"You are a helpful AI assistant.\",\n",
+    ")\n",
+    "\n",
+    "# Create the critic agent.\n",
+    "critic_agent = AssistantAgent(\n",
+    "    \"critic\",\n",
+    "    model_client=model_client,\n",
+    "    system_message=\"Provide constructive feedback. Respond with 'APPROVE' to when your feedbacks are addressed.\",\n",
+    ")\n",
+    "\n",
+    "# Define a termination condition that stops the task if the critic approves.\n",
+    "text_termination = TextMentionTermination(\"APPROVE\")\n",
+    "\n",
+    "# Create a team with the primary and critic agents.\n",
+    "team = RoundRobinGroupChat([primary_agent, critic_agent], termination_condition=text_termination)\n",
+    "if not VIEW_PROCESS:\n",
+    "    result = await team.run(task=\"Write a short poem about the fall season.\")\n",
+    "    print(f\"{result.source}: {result.content} \")\n",
+    "else:\n",
+    "    await team.reset()  # Reset the team for a new task.\n",
+    "    async for message in team.run_stream(task=\"模仿杜甫，写一首秋天的诗.\"):  # type: ignore\n",
+    "        if isinstance(message, TaskResult):\n",
+    "            print(\"Stop Reason:\", message.stop_reason)\n",
+    "        else:\n",
+    "            print(f\"{message.source}: {message.content} \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "774a7ed6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from autogen_agentchat.agents import AssistantAgent\n",
+    "# from autogen_agentchat.messages import TextMessage\n",
+    "# from autogen_ext.tools.mcp import McpWorkbench, StdioServerParams\n",
+    "\n",
+    "# # Get the fetch tool from mcp-server-fetch.\n",
+    "# fetch_mcp_server = StdioServerParams(command=\"uvx\", args=[\"mcp-server-fetch\"])\n",
+    "\n",
+    "# # Create an MCP workbench which provides a session to the mcp server.\n",
+    "# async with McpWorkbench(fetch_mcp_server) as workbench:  # type: ignore\n",
+    " \n",
+    "#     fetch_agent = AssistantAgent(\n",
+    "#         name=\"fetcher\", model_client=model_client, workbench=workbench, reflect_on_tool_use=False\n",
+    "#     )\n",
+    "\n",
+    "#     # Let the agent fetch the content of a URL and summarize it.\n",
+    "#     result = await fetch_agent.run(task=\"Summarize the content of https://en.wikipedia.org/wiki/Seattle\")\n",
+    "#     assert isinstance(result.messages[-1], TextMessage)\n",
+    "#     print(result.messages[-1].content)\n",
+    "\n",
+    "#     # Close the connection to the model client.\n",
+    "#     await model_client.close()"
    ]
   }
  ],
