add agent rag data

--- a/src/house_demo/estate_agents.ipynb
+++ b/src/house_demo/estate_agents.ipynb
@@ -31,7 +31,7 @@
     "from crewai import Agent,LLM\n",
     "import estate_tools  as ET\n",
     "from dotenv import load_dotenv  \n",
-    "from tools.tools_wrapper import get_yaml_config\n",
+    "from tools_wrapper import get_yaml_config\n",
     "from crewai.project import CrewBase"
    ]
   },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "852ac9db",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
     "        return Agent(\n",
     "                    config=agents_config['intent'], \n",
     "                    llm=llm,\n",
-    "                    tools=[],  # 意图识别不需要工具，仅分析文本\n",
+    "                    tools=[ET.intent_recognition_tool],  \n",
     "                    verbose=True,\n",
     "                    allow_delegation=False\n",
     "                )\n",
