--- a/src/house_demo/estate_tools.ipynb
+++ b/src/house_demo/estate_tools.ipynb
@@ -27,11 +27,22 @@
    "execution_count": 2,
    "id": "427ef12b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/zzz/RAG_demo/model/BAAI/bge-small-zh\n",
+      "Chroma 向量库已从 /home/zzz/LLM_Agent/src/house_demo/datasets/chroma_db 加载\n",
+      "[\"({'user_query': '贷款能办吗？法拍房是不是要全款？', 'think': '需说明特殊贷款渠道。', 'answer': ' 合作银行提供法拍贷。首付五成，利率只比基准高0.1%。这是上周客户的贷款批复书。'},)\", \"({'user_query': '公积金异地贷款怎么办？我在成都缴的。', 'think': '流程简化，跨省服务。', 'answer': ' 手机登录政务网授权就行。上周西安客户两天放款，利率比商贷低1个点。'},)\", \"({'user_query': '贷款需要什么材料？', 'think': '流程简化，强调便捷。', 'answer': ' 身份证加半年流水就行，其余我们搞定。现在申请明早银行就来面签，最快三天放款。'},)\"]\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
-    "from tool import skip_execution\n",
-    "from crewai.tools import BaseTool,tool"
+    "from tools.tool import skip_execution\n",
+    "from crewai.tools import BaseTool,tool\n",
+    "from rag_data import get_serarch"
    ]
   },
   {
@@ -41,17 +52,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IS_SKIP =True"
+    "IS_SKIP =True\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "id": "f1a3c7ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@tool(\"intent_recognition_tool\")\n",
+    "def intent_recognition_tool(query: str):\n",
+    "    \"\"\"根据用户输入查询相关对话，识别用户意图\"\"\"\n",
+    "    results = get_serarch(query=query,top_k=3)\n",
+    "    return results,  # 返回最相关的对话片段\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8386ec34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using Tool: intent_recognition_tool\n",
+      "/home/zzz/RAG_demo/model/BAAI/bge-small-zh\n",
+      "Chroma 向量库已从 /home/zzz/LLM_Agent/src/house_demo/datasets/chroma_db 加载\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([\"({'user_query': '听着靠谱，能带看现房吗？', 'think': '促成带看，营造紧迫感。', 'answer': ' 现在只剩3套了。今天订送半年物业费，我这就拿钥匙带您看实体层高？'},)\",\n",
+       "  \"({'user_query': '这套房土地证还没下来，敢不敢买？', 'think': '需提示风险并提供解决方案。', 'answer': ' 开发商正在补缴出让金，合同里写明了：交房180天内拿双证，否则每天赔总价万三。'},)\",\n",
+       "  '({\\'user_query\\': \\'有没有月供2000以下的二手房？装修过的。\\', \\'think\\': \\'需筛选次新小区简装房，考虑用户还款能力。\\', \\'answer\\': \" 高新区的\\'阳光家园\\'68平两居，房东急售开价55万。原来自住的简装，首付16万月供1900。阳台能看到万达广场。\"},)'],)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intent_recognition_tool.run(\"买套二的\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "84a8b386",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "\n",
+    "\n",
+    "# 查询房产市场趋势\n",
+    "@tool(\"get_market_trends\")\n",
+    "def get_market_trends(location, months=6):\n",
+    "    \"\"\"查询指定区域最近几个月的房产市场趋势\"\"\"\n",
+    "    print(f\"[工具调用] 查询市场趋势: 位置={location}, 时长={months}个月\")\n",
+    "    \n",
+    "    # 模拟市场趋势数据\n",
+    "    trends = []\n",
+    "    current_date = datetime.now()\n",
+    "    for i in range(months, 0, -1):\n",
+    "        month_str = (current_date.month - i) % 12 + 1\n",
+    "        year_str = current_date.year\n",
+    "        if month_str > current_date.month:\n",
+    "            year_str -= 1\n",
+    "        trends.append({\n",
+    "            \"month\": f\"{year_str}-{month_str:02d}\",\n",
+    "            \"average_price\": 1000000 + i * 50000,\n",
+    "            \"change_percent\": round(i * 0.5, 2)\n",
+    "        })\n",
+    "    \n",
+    "    return trends\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37c3947b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 查询房产信息\n",
     "# 模拟房产数据库工具\n",
     "@tool(\"query_property_info\")\n",
@@ -81,7 +170,16 @@
     "            \"area\": 150,\n",
     "            \"description\": f\"{location}高新区，环境优美，适合家庭居住\"\n",
     "        }\n",
-    "    ]\n",
+    "    ]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97c998d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# 计算房贷\n",
     "@tool(\"calculate_mortgage\")\n",
@@ -198,29 +296,7 @@
     "        \n",
     "        result[\"payment_schedule\"] = payment_schedule\n",
     "    \n",
-    "    return result\n",
-    "\n",
-    "# 查询房产市场趋势\n",
-    "@tool(\"get_market_trends\")\n",
-    "def get_market_trends(location, months=6):\n",
-    "    \"\"\"查询指定区域最近几个月的房产市场趋势\"\"\"\n",
-    "    print(f\"[工具调用] 查询市场趋势: 位置={location}, 时长={months}个月\")\n",
-    "    \n",
-    "    # 模拟市场趋势数据\n",
-    "    trends = []\n",
-    "    current_date = datetime.now()\n",
-    "    for i in range(months, 0, -1):\n",
-    "        month_str = (current_date.month - i) % 12 + 1\n",
-    "        year_str = current_date.year\n",
-    "        if month_str > current_date.month:\n",
-    "            year_str -= 1\n",
-    "        trends.append({\n",
-    "            \"month\": f\"{year_str}-{month_str:02d}\",\n",
-    "            \"average_price\": 1000000 + i * 50000,\n",
-    "            \"change_percent\": round(i * 0.5, 2)\n",
-    "        })\n",
-    "    \n",
-    "    return trends\n"
+    "    return result\n"
    ]
   },
   {
